Fixed IE overflow bug and navbar no color bug from last fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,14 @@
 html, body {
 	width: 100%;
+    height: 100%;
 	margin: 0;
     padding: 0;
-    overflow-x: hidden;
     font-family: sans-serif;
     background-color: rgba(247, 247, 247, 1);
+}
+
+body {
+    overflow-x: hidden;
 }
 
 ::-moz-selection {
@@ -484,11 +488,13 @@ html, body {
 #footer-links {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 #footer-links li {
     display: inline-block;
     padding: 14px 16px;
+    margin: 0;
 }
 
 #footer-links li > a {
@@ -694,3 +700,11 @@ html, body {
     -moz-user-select: none;
     user-select: none;
 }
+
+
+/* {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+*/
